Upgraded to Spring Boot 3 and java 21